# FrogMTEditor

./: .gitignore  BuildFrogEditor.cmd  FrogModEditor.cmd  README.md  README.txt  README_ADVANCED_USERS.md
source/: build_launcher.ps1  build_real_template_engines.py  pytest.ini
source/data/: economy_settings.json  lua_mods_settings.json  policy_settings.json  vanilla_paths.json
source/data/vanilla/: Balance.json  (+4 more)
source/desktop_native/: Cargo.toml  README.md  app.manifest  app.rc  build.rs
source/desktop_native/src/: app.rs  backend.rs  cache.rs  main.rs  models.rs  runtime.rs
source/docs/: LEARNINGS.md
source/scripts/: create_templates.py  export_complete_source_release_zip.py  export_public_source_zip.py  export_runtime_manifest.py  generate_native_ui_assets.py  inspect_template_pack.py
source/src/: cargo_scaling_deployer.py  customize_settings.py  desktop_api.py  desktop_bridge.py  desktop_view_models.py  economy_editor.py  engine_audio.py  engine_pricing.py  engine_validation.py  help_content.py  i18n.py  native_qt_app.py  native_services.py  policy_editor.py  template_engines.py  tire_analysis.py
source/tests/: conftest.py  test_desktop_api.py  test_desktop_view_models.py  test_export_runtime_manifest.py  test_native_qt_button_contracts.py  test_native_qt_geometry.py  test_native_qt_input_contracts.py  test_native_qt_overview_card_contracts.py  test_native_qt_smoke.py  test_native_qt_template_row_contracts.py  test_native_qt_widget_smoke.py  test_native_services.py  test_pack_templates_verification.py  test_phase2_cleanup.py  test_ui_rework_contracts.py
(+901 files in other folders)
