[package]
name = "frog_mod_editor_desktop"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
directories = "5"
native-windows-gui = "1.0"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[build-dependencies]
embed-resource = "2"
sha2 = "0.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
